fixed username cutting off avatar when overflowing
I overestimated the amount of width left to use for the username, that’s on me for being impatient to wait for a username that overflowed.

--- a/src/dashboard/public/styles/packs.css
+++ b/src/dashboard/public/styles/packs.css
@@ -98,7 +98,7 @@ main {
             color: var(--primary);
             text-overflow: ellipsis;
             overflow: hidden;
-            max-width: 18rem;
+            max-width: 10rem;
         }
 
         h3,
